# Flask_olx

./: README.md  app.py  example.py  pyproject.toml  req.txt
templates/: index.html
