[tool.poetry]
name = "repl_python3_api"
version = "0.1.0"
description = ""
authors = ["Polygon <bayuriski558@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
fake-useragent = "^0.1.11"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
